Cambios en la ubicacion de la carpeta imagenes en el segundo punto

--- a/2.TarjetaProducto/index.html
+++ b/2.TarjetaProducto/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="tarjeta">
-        
+        <h1>Gato</h1>
         <div class="tarjeta__im">
             <img src="Imagenes/images.jpeg" alt="">
         </div>
-        <div class="tarjeta__descripcion"></div>
+        <div class="tarjeta__descripcion"><p>Epicamente y solamente un gato</p></div>
         <div class="tarjeta__boton">
             <button>Boton</button>
         </div>
