--- a/2.TarjetaProducto/index.html
+++ b/2.TarjetaProducto/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="Estilos.css">
 </head>
 <body>
-    <div class="tarjeta">
-        <h1>Gato</h1>
-        <div class="tarjeta__im">
-            <img src="Imagenes/images.jpeg" alt="">
+    <div class="main">
+        <div class="tarjeta">
+            <h1>Gato</h1>
+            <div class="tarjeta__im">
+                <img src="Imagenes/images.jpeg" alt="">
+            </div>
+            <div class="tarjeta__descripcion"><p>Epicamente y solamente un gato</p></div>
+            <button class="boton">Boton</button>
         </div>
-        <div class="tarjeta__descripcion"><p>Epicamente y solamente un gato</p></div>
-        <div class="tarjeta__boton">
-            <button>Boton</button>
+        <div class="tarjeta">
+            <h1>Gato</h1>
+            <div class="tarjeta__im">
+                <img src="Imagenes/images.jpeg" alt="">
+            </div>
+            <div class="tarjeta__descripcion"><p>Epicamente y solamente un gato</p></div>
+            <button class="boton">Boton</button>
         </div>
     </div>
 </body>
