Realizado el punto 3 de galeria

--- a/3.GaleriaImagenes/index.html
+++ b/3.GaleriaImagenes/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div class="main">
-        <div class="main__tarjetas"></div>
+        <h1 class="titulo">GALERIA IMAGENES</h1>
+        <div class="contenedor">
+            <div class="contenedor__tarjetas">
+                <h2 class="Tarjetas__titulo">Gato Encontrado</h2>
+                <img src="Imagenes/gato.webp" alt="" class="imagen">
+                <p class="Tarjetas__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, consequatur!</p>
+            </div>
+            <div class="contenedor__tarjetas">
+                <h2 class="Tarjetas__titulo">Gato Encontrado</h2>
+                <img src="Imagenes/Gatojpg.jpg" alt="" class="imagen">
+                <p class="Tarjetas__texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut, consequatur!</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
