Footer de color naranja se ha realizado

--- a/7.Test_8.Footer/index.html
+++ b/7.Test_8.Footer/index.html
@@ -22,7 +22,22 @@
         </div>
     </div>
     <div class="footer">
-        
+        <div class="footer__columna">
+            <p>Texto 1</p>
+            <p>Texto 2</p>
+            <p>Texto 3</p>
+        </div>
+        <div class="footer__columna">
+            <p>Sobre nosotros 1</p>
+            <p>Sobre nosotros 2</p>
+            <p>Sobre nosotros 3</p>
+        </div>
+        <div class="footer__columna">
+            <p>Gato usuario</p>
+            <p>Plataforma</p>
+            <p>Derechos reservados</p>
+        </div>
+        <div class="footer__columna"></div>
     </div>
 </body>
 </html>
